jenkins-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-server-service
  namespace: devops-tools
spec:
  selector: 
    app: jenkins-server
  type: NodePort  
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32000
      name: httpport
    - port: 50000
      targetPort: 50000
      name: jnlport
