jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: devops-tools
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  # tls:
  # - hosts:
  #   - chat.cellailo.uk
  #   secretName: chat-cellailo-tls-secret
  rules:
  - host: jenkins.epsindo.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-server-service
            port:
              number: 80
